--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+  <ul>
+    <li><a href="search.html">Search Results</a></li>
+    <li><a href="aboutus.html">About Us</a></li>
+  </ul>
+  </body>
+  </body>
+</html>
+
