Changed login button color to white

--- a/aboutus.html
+++ b/aboutus.html
@@ -41,8 +41,8 @@
               <div class="input-group">
                 <div class="input-group-btn search-panel">
                   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                                    <span id="search_by">Search by</span> <span class="caret"></span>
-                                </button>
+                    <span id="search_by">Search by</span> <span class="caret"></span>
+                    </button>
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="#">Keywords</a></li>
                     <li><a href="#">Teacher Name</a></li>
@@ -52,7 +52,7 @@
                 <input type="hidden" name="search_param" value="Keywords" id="search_param">
                 <input type="text" class="form-control" name="search_terms" placeholder="Search">
                 <span class="input-group-btn">
-                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                  <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
               </div>
             </form>
@@ -74,7 +74,7 @@
                         <input type="password" class="form-control" id="passwd" placeholder="Password" required>
                       </div>
                       <div class="form-group">
-                        <button type="submit" class="btn btn-success btn-block">Login</button>
+                        <button type="submit" class="btn btn-default btn-block">Login</button>
                       </div>
                     </form>
                   </div>
