--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Create a Course</a></li>
           <li class="dropdown">
-            <a href="#category-page-link" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+            <a href="#category-page-link" class="dropdown-toggle" data-toggle="dropdown" role="button">Categories <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Academic</a></li>
               <li><a href="#">Music and Arts</a></li>
