--- a/search.html
+++ b/search.html
@@ -23,7 +23,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">Create a Course</a></li>
           <li class="dropdown">
-            <a href="#category-page-link" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+            <a href="#category-page-link" class="dropdown-toggle" data-toggle="dropdown" role="button">Categories <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Academic</a></li>
               <li><a href="#">Music and Arts</a></li>
@@ -88,9 +88,17 @@
   </nav>
   <div class="container">
     <h1>Search Results</h1>
-    <h3 id="result">1 result(s) were found for the search for programming</h3>
-
-
+    <h3 id="result">1 result(s) were found for the search for programming <div class="btn-group">
+      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
+        Sort By
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#">Course Name</a></li>
+        <li><a class="dropdown-item" href="#">Teacher Name</a></li>
+       <li> <a class="dropdown-item" href="#">Rating</a></li>
+      </div>
+    </ul></h3>
+    
     <section class="col-xs-12 col-sm-6 col-md-12">
       <article class="search-result-row">
         <div class="col-xs-12 col-sm-12 col-md-7 excerpet">
