Fixed missing category

--- a/search.html
+++ b/search.html
@@ -27,9 +27,9 @@
             <ul class="dropdown-menu">
               <li><a href="#">Academic</a></li>
               <li><a href="#">Music and Arts</a></li>
-              <li><a href="#">Something else here</a></li>
               <li><a href="#">Office Skills</a></li>
               <li><a href="#">Cooking and Brewing</a></li>
+              <li><a href="#">Home-Related</a></li>
               <li><a href="#">Sports and Games</a></li>
               <li><a href="#">Technology</a></li>
               <li><a href="#">Other</a></li>
