--- a/aboutus.html
+++ b/aboutus.html
@@ -26,11 +26,11 @@
           <li class="dropdown">
             <a href="#category-page-link" class="dropdown-toggle" data-toggle="dropdown" role="button">Categories <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Academic</a></li>
+             <li><a href="#">Academic</a></li>
               <li><a href="#">Music and Arts</a></li>
-              <li><a href="#">Something else here</a></li>
               <li><a href="#">Office Skills</a></li>
               <li><a href="#">Cooking and Brewing</a></li>
+              <li><a href="#">Home-Related</a></li>
               <li><a href="#">Sports and Games</a></li>
               <li><a href="#">Technology</a></li>
               <li><a href="#">Other</a></li>
