--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <ul>
     <li><a href="search.html">Search Results</a></li>
     <li><a href="aboutus.html">About Us</a></li>
+    <li><a href="categories.html">About Us</a></li>
   </ul>
   </body>
   </body>
