Added Course, Profile, and Edit Profile page to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <li><a href="search.html">Search Results</a></li>
     <li><a href="aboutus.html">About Us</a></li>
     <li><a href="categories.html">Categories</a></li>
+	<li><a href="course.html">Course</a></li>
+	<li><a href="edit-profile.html">Edit Profile</a></li>
+	<li><a href="profile.html">Profile</a></li>
   </ul>
   </body>
   </body>
