Updated Nav Bar on Login/Sign Up and Account

--- a/course.html
+++ b/course.html
@@ -41,6 +41,7 @@
 								<li><a href="#">Others</a></li> 
 							</ul>
 						</li>
+						<li><a href="#">Create a Course</a></li>
 						<form class="navbar-form navbar-left" role="search">
 							<div class="input-group">
 								<input type="text" class="form-control" placeholder="Course, teacher...etc.">
@@ -64,8 +65,8 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li id="link-admin"><a href="#">Admin</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+						<li><a href="#" id="account-link"><span class="glyphicon glyphicon-user"></span> tvaillant</a></li>
+						<li><a href="#" id="login"><span class="glyphicon glyphicon-log-in"></span> Log Out</a></li>
 					</ul>
 				</div>
 			</div>
