--- a/edit-profile.html
+++ b/edit-profile.html
@@ -38,6 +38,7 @@
 								<li><a href="#">Others</a></li> 
 							</ul>
 						</li>
+						<li><a href="#">Create a Course</a></li>
 						<form class="navbar-form navbar-left" role="search">
 							<div class="input-group">
 								<input type="text" class="form-control" placeholder="Course, teacher...etc.">
@@ -54,8 +55,8 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li id="link-admin"><a href="#">Admin</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-user"></span> sladner</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
 					</ul>
 				</div>
 			</div>
