Changed some style

--- a/categories.html
+++ b/categories.html
@@ -67,64 +67,64 @@
   <a href="#top10" class="btn btn-purple">Go To Top 10 Courses</a>
 </div></div> <br>
 
-<div class="container">    
+<div class="container text-center">    
   <div class="row">
     <div class="col-sm-4">
     	<a class="thumbnail">
     		<img src="images/academic.png" class="img-rounded" alt="Academic" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Academic Skills</button>
+    		<a href="search.html" class="btn btn-purple">Academic Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/art.png" class="img-rounded" alt="Art" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Music/Art Skills</button>
+    		<a href="search.html" class="btn btn-purple">Music/Art Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/cooking.png" class="img-rounded" alt="Cooking" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Cooking Skills</button>
+    		<a href="search.html" class="btn btn-purple">Cooking Skills</a>
     	</a>
     </div>
   </div>
 </div><br>
 
-<div class="container">    
+<div class="container text-center">    
   <div class="row">
     <div class="col-sm-4">
     	<a class="thumbnail">
     		<img src="images/home.png" class="img-rounded" alt="Home" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Home-Related Skills</button>
+    		<a href="search.html" class="btn btn-purple">Home-Related Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/office.png" class="img-rounded" alt="Office" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Office/Document Skills</button>
+    		<a href="search.html" class="btn btn-purple">Office/Document Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/games.png" class="img-rounded" alt="Game" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Sports/Gaming Skills</button>
+    		<a href="search.html" class="btn btn-purple">Sports/Gaming Skills</a>
     	</a>
     </div>
   </div>
 </div><br>
 
-<div class="container">    
+<div class="container text-center">    
   <div class="row">
     <div class="col-sm-4">
     	<a class="thumbnail">
     		<img src="images/tech.png" class="img-rounded" alt="Technology" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Technological Skills</button>
+    		<a href="search.html" class="btn btn-purple">Technological Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/question.png" class="img-rounded" alt="Miscellaneous" height="200" width="200">
-    		<button type="button" class="btn btn-default btn-block">Miscellaneous</button>
+    		<a href="search.html" class="btn btn-purple">Miscellaneous</a>
     	</a>
     </div>
   </div>
