--- a/search.html
+++ b/search.html
@@ -90,7 +90,11 @@
 
   <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-      <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | <a href="#">Facebook</a> | <a href="#">Twitter</a>
+      <p class="navbar-text pull-left" style="color:white;">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+        <a href="http://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
+            <a href="http://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
+            <a href="http://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
+      </p>
     </div>
   </div>
 
@@ -192,7 +196,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="learnology.js"></script>
+  <script src="navbar.js"></script>
 </body>
 
 </html>
