--- a/aboutus.html
+++ b/aboutus.html
@@ -102,7 +102,11 @@
 
   <div class="panel-footer">
     <div class="container">
-      <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="#">About Us</a> | <a href="#">Facebook</a> | <a href="#">Twitter</a></p>
+      <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+        <a href="http://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
+            <a href="http://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
+            <a href="http://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
+      </p>
     </div>
   </div>
 
@@ -198,13 +202,14 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="aboutus.css">
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="learnology.js"></script>
+  <script src="navbar.js"></script>
 </body>
 
 </html>
