--- a/aboutus.html
+++ b/aboutus.html
@@ -21,8 +21,8 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Create a Course</a></li>
+          <li><a href="title.html">Home</a></li>
+          <li><a href="coursecreation.html">Create a Course</a></li>
           <li><a href="categories.html">Categories</a></li> 
           <div class="col-sm-3 col-md-6">
             <form class="navbar-form" role="search">
@@ -55,11 +55,12 @@
       </div>
     </div>
   </nav> <br><br>
-  <div class="container">
-    <div class="jumbotron">
+  <div class="jumbotron text-center">
       <h1>Learnology</h1>
       <p>People teach. People learn. This is where they connect.</p>
     </div>
+  <div class="container">
+    
     <h1>About Us</h1>
 
     <p>We're a group of four CSC309 students: </p>
