--- a/categories.html
+++ b/categories.html
@@ -33,9 +33,9 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Create a Course</a></li>
-          <li class="active"><a href="categories.html">Categories</a></li> 
+          <li><a href="title.html">Home</a></li>
+          <li><a href="coursecreation.html">Create a Course</a></li>
+          <li class="active" ><a href="categories.html">Categories</a></li> 
           <div class="col-sm-3 col-md-6">
             <form class="navbar-form" role="search">
               <div class="input-group">
@@ -70,10 +70,12 @@
 
 
 
-<div class="panel panel-default bg-1 text-center"><div class="panel-body">
-  <h1>Categories</h1>
-  <h3>Select one of these categories and browse through the courses offered in that subject area</h3>
-  <a href="#top10" class="btn btn-blue">Go To Top 10 Courses</a>
+<div class="panel panel-default"><div class="panel-body">
+  <div class="jumbotron text-center">
+    <h1>Categories</h1>
+    <p>Select one of these categories and browse through the courses offered in that subject area</p>
+    <a href="#top10" class="btn btn-blue">Go To Top 10 Courses</a>
+  </div>
 </div></div> <br>
 
 <div class="container text-center">    
