--- a/categories.html
+++ b/categories.html
@@ -68,15 +68,11 @@
     </div>
   </nav> <br><br>
 
-
-
-<div class="panel panel-default"><div class="panel-body">
-  <div class="jumbotron text-center">
+<div class="jumbotron text-center">
     <h1>Categories</h1>
     <p>Select one of these categories and browse through the courses offered in that subject area</p>
     <a href="#top10" class="btn btn-blue">Go To Top 10 Courses</a>
   </div>
-</div></div> <br>
 
 <div class="container text-center">    
   <div class="row">
@@ -225,10 +221,10 @@
         <div class="modal-body text-center">
           <form class="form-signin">
             <label for="inputUsername" class="sr-only">Username</label>
-            <input type="username" id="inputUsername" class="form-control" data-toggle="tooltip" title="JohnSmith" placeholder="Username" required="">
+            <input type="username" id="inputUsername" class="form-control" data-toggle="tooltip" title="Use 'JohnSmith'" placeholder="Username" required="">
             <br>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" data-toggle="tooltip" title="password" placeholder="Password" required="">
+            <input type="password" id="inputPassword" class="form-control" data-toggle="tooltip" title="Use 'password'" placeholder="Password" required="">
           </form> <br>
           <div id="notFound" style='color:red; display:none;'>* Account Not Found *</div>
           <button id="submit" class="btn btn-lg btn-primary" type="submit">Sign in</button>
