--- a/profile.html
+++ b/profile.html
@@ -9,65 +9,62 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="profile.css">
-		<link rel="stylesheet" type="text/css" href="allPages.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<script src="profile.js"></script>
-		<script src="allPages.js"></script>
+		<script src="navbar.js"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-default navbar-fixed-top">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container-fluid">
-				<div class="navbar-header">
+			    <div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span> 
+						<span class="icon-bar"></span>
 					</button>
-				</div>
-				<div class="collapse navbar-collapse" id="myNavbar">
+					<a class="navbar-brand" style="color:white;"><span class="glyphicon glyphicon-education"></span> Learnology</a>
+			    </div>
+			    <div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav">
-						<li><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-						<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">Academy</a></li>
-								<li><a href="#">Arts and Music</a></li>
-								<li><a href="#">Cooking and Brewing</a></li>
-								<li><a href="#">Home and Garden</a></li>
-								<li><a href="#">Office Skills</a></li> 
-								<li><a href="#">Sports and Games</a></li> 
-								<li><a href="#">Technology</a></li> 
-								<li><a href="#">Others</a></li> 
-							</ul>
-						</li>
+						<li><a href="#">Home</a></li>
 						<li><a href="#">Create a Course</a></li>
-						<form class="navbar-form navbar-left" role="search">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Course, teacher...etc.">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">
-										<span class="glyphicon glyphicon-search"></span>
-									</button>
-								</span>
-							</div>
-							<div class="checkbox owner-only" id="checkbox-admin">
-								<label><input type="checkbox"> Admin User</label>
-							</div>
-						</form>
+						<li><a href="categories.html">Categories</a></li> 
+						<div class="col-sm-3 col-md-6">
+							<form class="navbar-form navbar-left" role="search">
+								<div class="input-group">
+									<div class="input-group-btn search-panel">
+										<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+											<span id="search_by">Search by</span> <span class="caret"></span>
+										</button>
+										<ul class="dropdown-menu" role="menu">
+											<li><a href="#">Keywords</a></li>
+											<li><a href="#">Teacher Name</a></li>
+											<li><a href="#">Tag</a></li>
+										</ul>
+									</div>
+									<input type="hidden" name="search_param" value="Keywords" id="search_param">
+									<input type="text" class="form-control" name="search_terms" placeholder="Search">
+									<span class="input-group-btn">
+										<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+									</span>
+								</div>
+							</form>
+					    </div>
 						<div class="btn-group">
-							<button type="button" id="currentUserType" class="btn btn-primary navbar-btn dropdown-toggle" data-toggle="dropdown">
-							Account Owner <span class="caret"></span></button>
+							<button type="button" id="currentUserType" class="btn btn-primary navbar-btn dropdown-toggle" data-toggle="dropdown">Owner <span class="caret"></span></button>
 							<ul class="dropdown-menu" role="menu">
-							    <li><a href="#" id="optionalUserType" onclick="switchUserType()">Visitor</a></li>
+								<li><a href="#" id="optionalUserType" onclick="switchUserType()">Visitor</a></li>
 							</ul>
 						</div>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li id="link-admin"><a href="#">Admin</a></li>
-						<li class="owner-only"><a href="#"><span class="glyphicon glyphicon-user"></span> sladner</a></li>
-						<li><a id="login" href="#"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+						<li><a id="view">USER VIEW</a></li>
+						<li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
+						<li><a id="logout" data-toggle="modal" data-target="#logoutModal"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 					</ul>
+				</div>
 			</div>
 		</nav>
 
@@ -221,11 +218,14 @@
 			</div>
 		</main>
 		
-		<!-- footer image: http://www.bigbluestuff.com/res/sys/footer_bg.png -->
-		<footer class="row">
-			<p class="col-sm-10">© 2016 - Site Designed By Learnology Team</p>
-			<a href="#" class="col-sm-1">About Us</a>
-			<a href="#" class="col-sm-1">Contact</a>
-		</footer>
+		<div class="panel-footer">
+			<div class="container">
+				<p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+					<a href="http://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
+					<a href="http://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
+					<a href="http://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
