--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About Us</title>
+  <title>Learnology - About Us</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
 </head>
