--- a/title.html
+++ b/title.html
@@ -9,6 +9,24 @@
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <script src="navbar.js"></script>
       <link rel="stylesheet" href="style.css">
+      <script>
+       $(document).ready(function(){
+         $(".nav-pills>li").click(function(){
+               $(".nav-pills>li").removeClass();
+               $(this).addClass("active");
+         });
+       });
+     </script>
+       <style type="text/css">
+          .nav-pills>li {
+            padding-left:100px;
+            padding-right:100px;
+          }
+
+          .bod {
+            min-height: 300px;
+          }
+        </style>
       <head>
    <body>
       <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -58,13 +76,19 @@
       </nav>
       <br><br>
       <div class="jumbotron text-center">
-                  <h1>Learnology</h1>
-                  <p>People teach. People learn. This is where they connect.</p>
+         <h1>Learnology</h1>
+         <p>People teach. People learn. This is where they connect.</p>
       </div>
-      <div class="container">
+      <div class="container bod">
+         <ul class="nav nav-pills">
+               <li class="active"><a href="#course">Recommended Courses</a></li>
+               <li><a href="#teachers">Recommended Teachers</a></li>
+               <li><a href="#new">Newest Courses</a></li>
+         </ul><br>
          <div class="row">
             <div class="col-md-12 text-center">
-               
+               <a name="course"> </a>
+               <br> <br> <br>
                <div class="row" style="border: 2px solid #3D3D3D">
                   <h3>Recommended Courses</h3>
                   <div class="row">
@@ -90,8 +114,9 @@
                         <br><br>
                      </div>
                   </div>
-               </div>
-               <div class="row" style="border: 2px solid #3D3D3D">
+               </div> <br>
+               <a name="teachers"> </a> <br><br>
+               <div class="row" style="border: 2px solid #3D3D3D;">
                   <h3>Recommended Teachers </h3>
                   <div class="row">
                      <div class="col-xs-4 text-center" style="float: left;">
@@ -104,8 +129,9 @@
                         <img src="thejoker.jpg" style="width: 100%; padding: 15px;">
                      </div>
                   </div>
-               </div>
-               <div class="row" style="border: 2px solid #3D3D3D">
+               </div> <br>
+               <a name="new"> </a> 
+               <div name="new" class="row" style="border: 2px solid #3D3D3D;">
                   <h3>Newest Courses</h3>
                   <div class="row">
                      <div class="col-xs-4 text-center" style="float: left;">
@@ -130,7 +156,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> <br>
       <div class="panel-footer">
          <div class="container">
             <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
