Added files via upload

--- a/title.html
+++ b/title.html
@@ -74,12 +74,12 @@
             </div>
          </div>
       </nav>
-      <br><br>
       <div class="jumbotron text-center">
          <h1>Learnology</h1>
          <p>People teach. People learn. This is where they connect.</p>
       </div>
       <div class="container bod">
+         <h2 class="text-center">Jump To Specfic Section</h2>
          <ul class="nav nav-pills">
                <li class="active"><a href="#course">Recommended Courses</a></li>
                <li><a href="#teachers">Recommended Teachers</a></li>
@@ -120,13 +120,13 @@
                   <h3>Recommended Teachers </h3>
                   <div class="row">
                      <div class="col-xs-4 text-center" style="float: left;">
-                        <img src="walterwhite.jpg" style="width: 100%; padding: 15px;">
+                        <img src="images/walterwhite.jpg" style="width: 100%; padding: 15px;">
                      </div>
                      <div class="col-xs-4 text-center" style="float: left;">
-                        <img src="stevejobs.jpg" style="width: 100%; padding: 15px;">
+                        <img src="images/stevejobs.jpg" style="width: 100%; padding: 15px;">
                      </div>
                      <div class="col-xs-4 text-center" style="float: left;">
-                        <img src="thejoker.jpg" style="width: 100%; padding: 15px;">
+                        <img src="images/thejoker.jpg" style="width: 100%; padding: 15px;">
                      </div>
                   </div>
                </div> <br>
