--- a/categories.html
+++ b/categories.html
@@ -66,7 +66,7 @@
         </ul>
       </div>
     </div>
-  </nav> <br><br>
+  </nav>
 
 <div class="jumbotron text-center">
     <h1>Categories</h1>
