--- a/course.html
+++ b/course.html
@@ -52,7 +52,7 @@
 							</form>
 					    </div>
 						<div class="btn-group">
-							<button type="button" id="currentUserType" class="btn btn-primary navbar-btn dropdown-toggle" data-toggle="dropdown">Instructor <span class="caret"></span></button>
+							<button type="button" id="currentUserType" class="btn btn-primary btn-xs navbar-btn dropdown-toggle" data-toggle="dropdown">Instructor <span class="caret"></span></button>
 							<ul class="dropdown-menu" role="menu">
 							    <li><a href="#" id="optionalUserType1">Student </a></li>
 								<li><a href="#" id="optionalUserType2">Visitor </a></li>
