--- a/profile.html
+++ b/profile.html
@@ -53,7 +53,7 @@
 							</form>
 					    </div>
 						<div class="btn-group">
-							<button type="button" id="currentUserType" class="btn btn-primary navbar-btn dropdown-toggle" data-toggle="dropdown">Owner <span class="caret"></span></button>
+							<button type="button" id="currentUserType" class="btn btn-primary btn-xs navbar-btn dropdown-toggle" data-toggle="dropdown">Owner <span class="caret"></span></button>
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="#" id="optionalUserType" onclick="switchUserType()">Visitor</a></li>
 							</ul>
