Removed <br><br> after nav-bar

--- a/aboutus.html
+++ b/aboutus.html
@@ -54,7 +54,7 @@
         </ul>
       </div>
     </div>
-  </nav> <br><br>
+  </nav>
   <div class="jumbotron text-center">
       <h1>Learnology</h1>
       <p>People teach. People learn. This is where they connect.</p>
