--- a/categories.html
+++ b/categories.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="categories.css">
+  <link rel="stylesheet" href="css/categories.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="navbar.js"></script>
+  <script src="scripts/navbar.js"></script>
   <script>
     $(document).ready(function(){
       $(".nav-pills>li").click(function(){
