--- a/search.html
+++ b/search.html
@@ -189,14 +189,14 @@
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="css/search.css"/>
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
   <!-- Latest compiled JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="navbar.js"></script>
+  <script src="scripts/navbar.js"></script>
 </body>
 
 </html>
