--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   </head>
   <body>
   <ul>
-    <li><a href="search.html">Search Results</a></li>
-    <li><a href="aboutus.html">About Us</a></li>
-    <li><a href="categories.html">Categories</a></li>
+  	<li><a href="title.html">Main Page</a></li>
+  	<li><a href="coursecreation.html">Main Page</a></li>
+    	<li><a href="search.html">Search Results</a></li>
+    	<li><a href="aboutus.html">About Us</a></li>
+	<li><a href="categories.html">Categories</a></li>
 	<li><a href="course.html">Course</a></li>
 	<li><a href="edit-profile.html">Edit Profile</a></li>
 	<li><a href="profile.html">Profile</a></li>
