--- a/title.html
+++ b/title.html
@@ -7,8 +7,8 @@
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
       <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-      <script src="navbar.js"></script>
-      <link rel="stylesheet" href="style.css">
+      <script src="scripts/navbar.js"></script>
+      <link rel="stylesheet" href="css/style.css">
       <script>
        $(document).ready(function(){
          $(".nav-pills>li").click(function(){
@@ -25,6 +25,10 @@
 
           .bod {
             min-height: 300px;
+          }
+
+          img:hover {
+            opacity: 0.4;
           }
         </style>
       <head>
@@ -89,68 +93,74 @@
             <div class="col-md-12 text-center">
                <a name="course"> </a>
                <br> <br> <br>
-               <div class="row" style="border: 2px solid #3D3D3D">
-                  <h3>Recommended Courses</h3>
-                  <div class="row">
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <h4>Chemistry</h4>
-                        Academics<br>
-                        Price: $1mil /hr <br>
-                        Taught by Mr. White
-                        <br><br>
-                     </div>
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <h4>Intro to Computer Programming</h4>
-                        Technology<br>
-                        Price: $1bil Inclusive <br>
-                        Taught by Mr. Jobs
-                        <br><br>
-                     </div>
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <h4>Make-Up Tutorial</h4>
-                        Home-Related<br>
-                        Price: Free <br>
-                        Taught by Mr. Kerr 
-                        <br><br>
+               <div class="panel panel-default">
+                  <div class="panel-body">
+                     <h3>Recommended Courses</h3>
+                     <div class="row">
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <h4><a href="course.html">Chemistry</a></h4>
+                           Academics<br>
+                           Price: $1mil /hr <br>
+                           Taught by Mr. White
+                           <br><br>
+                        </div>
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <h4><a href="course.html">Intro to Computer Programming</a></h4>
+                           Technology<br>
+                           Price: $1bil Inclusive <br>
+                           Taught by Mr. Jobs
+                           <br><br>
+                        </div>
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <h4><a href="course.html">Make-Up Tutorial</a></h4>
+                           Home-Related<br>
+                           Price: Free <br>
+                           Taught by Mr. Kerr 
+                           <br><br>
+                        </div>
                      </div>
                   </div>
                </div> <br>
                <a name="teachers"> </a> <br><br>
-               <div class="row" style="border: 2px solid #3D3D3D;">
-                  <h3>Recommended Teachers </h3>
-                  <div class="row">
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <img src="images/walterwhite.jpg" style="width: 100%; padding: 15px;">
-                     </div>
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <img src="images/stevejobs.jpg" style="width: 100%; padding: 15px;">
-                     </div>
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <img src="images/thejoker.jpg" style="width: 100%; padding: 15px;">
+               <div class="panel panel-default">
+                  <div class="panel-body">
+                     <h3>Recommended Teachers </h3>
+                     <div class="row">
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <a href="profile.html"><img src="images/walterwhite.jpg" style="width: 100%; padding: 15px;"></a>
+                        </div>
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <a href="profile.html"><img src="images/stevejobs.jpg" style="width: 100%; padding: 15px;"></a>
+                        </div>
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <a href="profile.html"><img src="images/thejoker.jpg" style="width: 100%; padding: 15px;"></a>
+                        </div>
                      </div>
                   </div>
                </div> <br>
                <a name="new"> </a> 
-               <div name="new" class="row" style="border: 2px solid #3D3D3D;">
-                  <h3>Newest Courses</h3>
-                  <div class="row">
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <h4>Sample Course 1</h4>
-                        Music and Arts<br>
-                        Price: $1mil /hr 
-                        <br><br>
-                     </div>
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <h4>Sample Course 2</h4>
-                        Technology<br>
-                        Price: $1bil total  
-                        <br><br>
-                     </div>
-                     <div class="col-xs-4 text-center" style="float: left;">
-                        <h4>Sample Course 3</h4>
-                        Home-Related<br>
-                        Price: Free 
-                        <br><br>
+               <div class="panel panel-default">
+                  <div class="panel-body">
+                     <h3>Newest Courses</h3>
+                     <div class="row">
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <h4><a href="course.html">Sample Course 1</a></h4>
+                           Music and Arts<br>
+                           Price: $1mil /hr 
+                           <br><br>
+                        </div>
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <h4><a href="course.html">Sample Course 2</a></h4>
+                           Technology<br>
+                           Price: $1bil total  
+                           <br><br>
+                        </div>
+                        <div class="col-xs-4 text-center" style="float: left;">
+                           <h4><a href="course.html">Sample Course 3</a></h4>
+                           Home-Related<br>
+                           Price: Free 
+                           <br><br>
+                        </div>
                      </div>
                   </div>
                </div>
