--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <ul>
     	<li><a href="title.html">Main Page</a></li>
-    	<li><a href="coursecreation.html">Main Page</a></li>
+    	<li><a href="coursecreation.html">Course Creation</a></li>
     	<li><a href="search.html">Search Results</a></li>
     	<li><a href="aboutus.html">About Us</a></li>
     	<li><a href="categories.html">Categories</a></li>
