--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Search Results</title>
+  <title>Learnology - Search Results</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
