--- a/title.html
+++ b/title.html
@@ -23,10 +23,6 @@
             padding-right:100px;
           }
 
-          .bod {
-            min-height: 300px;
-          }
-
           img:hover {
             opacity: 0.4;
           }
@@ -82,7 +78,7 @@
          <h1>Learnology</h1>
          <p>People teach. People learn. This is where they connect.</p>
       </div>
-      <div class="container bod">
+      <div class="container">
          <h2 class="text-center">Jump To Specfic Section</h2>
          <ul class="nav nav-pills">
                <li class="active"><a href="#course">Recommended Courses</a></li>
