Added idea.pdf and updated index.html
- Idea.pdf or idea.doc is documented by all team members from google
doc.

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   </head>
   <body>
   <ul>
+	<li><a href="title.html">Home</a></li>
     <li><a href="search.html">Search Results</a></li>
-    <li><a href="aboutus.html">About Us</a></li>
     <li><a href="categories.html">Categories</a></li>
-	<li><a href="course.html">Course</a></li>
-	<li><a href="edit-profile.html">Edit Profile</a></li>
 	<li><a href="profile.html">Profile</a></li>
+	<li><a href="edit-profile.html">Edit Profile</a></li>
+	<li><a href="course.html">Course</a></li>
+	<li><a href="coursecreation.html">Create a Course</a></li>
+	<li><a href="aboutus.html">About Us</a></li>
   </ul>
   </body>
   </body>
