Removed .html in links

--- a/public/edit-profile.html
+++ b/public/edit-profile.html
@@ -26,7 +26,7 @@
 					<ul class="nav navbar-nav">
 						<li><a href="#">Home</a></li>
 						<li><a href="#">Create a Course</a></li>
-						<li><a href="categories.html">Categories</a></li> 
+						<li><a href="categories">Categories</a></li> 
 						<div class="col-sm-3 col-md-6">
 							<form class="navbar-form navbar-left" role="search">
 								<div class="input-group">
@@ -51,7 +51,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a id="view">USER VIEW</a></li>
-						<li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
+						<li><a href="profile"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
 						<li><a id="logout" data-toggle="modal" data-target="#logoutModal"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 					</ul>
 				</div>
@@ -59,7 +59,7 @@
 		</nav>
 		<main>
 			<div class="container-fluid">
-				<form class="form-horizontal" role="form" action="profile.html">
+				<form class="form-horizontal" role="form" action="profile">
 					<fieldset class="col-sm-6">
 						<legend>Personal Information</legend>
 						<div class="form-group">
@@ -154,7 +154,7 @@
 		</main>
 		<div class="panel-footer">
 			<div class="container">
-				<p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+				<p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus">About Us</a> | 
 					<a href="http://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
 					<a href="http://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
 					<a href="http://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
