--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
       <title>Learnology - Home</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
       <script src="scripts/navbar.js"></script>
       <link rel="stylesheet" href="css/style.css">
       <script>
@@ -166,9 +166,9 @@
       <div class="panel-footer">
          <div class="container">
             <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
-               <a href="http://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
-               <a href="http://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
-               <a href="http://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
+               <a href="https://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
+               <a href="https://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
+               <a href="https://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
             </p>
          </div>
       </div>
@@ -214,7 +214,7 @@
                   <h4 class="modal-title">Sign Up</h4>
                </div>
                <div class="modal-body text-center">
-                  <form class="form-signin" action="http://127.0.0.1:3000/users/user" method="POST" id="form_signup">
+                  <form class="form-signin" action="https://127.0.0.1:3000/users/user" method="POST" id="form_signup">
                      <label for="inputUsername" class="sr-only">Username</label>
                      <input type="username" name="username" id="inputUsernameSU" class="form-control" placeholder="Username" required="">
                      <br>
